# crud_api

./: README.md  pyproject.toml
fastapi_crud/: authentication.py  config.py  database.py  main.py  models.py  oauth2.py  posts.py  schema.py  user.py  utils.py
