[project]
name = "fastapi-crud"
version = "0.1.0"
description = ""
authors = [
    {name = "kashiftareen",email = "kashif.tareen1999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)"
]

[tool.poetry.scripts]
dev = "fastapi_crud.main:start"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
